--- a/about/index.html
+++ b/about/index.html
@@ -4,8 +4,10 @@ title: About Hank Quinlan
 ---
 
 		<div class="about">
-			<h1>About</h1>
-			<p>Hello, my name is Gloria and I am the Senior Library Assistant for Digital Initiatives at Tufts University.</p>
+			<h1>About me</h1>
+			<p>Hello, my name is Gloria Shin and I am the Senior Library Assistant for Digital Initiatives at Tufts University.</p>
+			<p>I graduated from Simmons University with my Masters in Library and Information Science.</p>
+			<p>I also have my Bachelors degrees in Anthropology and Political Science from the University of Pittsburgh.</p>
 
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
