--- a/cv/index.html
+++ b/cv/index.html
@@ -5,18 +5,33 @@ title: CV of Your Name
 
 	<div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Hank Quinlan</h1>
+					<h1>Gloria (Haein) Shin</h1>
 					<address>
-					<strong>Affiliation</strong><br>
-					Street Address<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
+					<strong>Tufts University</strong>
+					<br>Medford, MA 02155<br>
+					<abbr title="phone"></abbr><br>
+					<span class="obfuscate">gloria.shin@tufts.edu</span>
 					</address>
 
-					<h2>Select Publications</h2>
+					<h2>Experience</h2>
 
-					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
+					<p><strong>Tufts University</strong>
+					<p>Senior Library Assistant for Digital Initiatives</p>
+					<p>2022-Present</p>
+
+					<p><strong>Hearst Corporation</strong>
+					<p>Archival Technician</p>
+					<p>2020-Present</p>
+
+					<h2>Education</h2>
+
+					<p><strong>Simmons University</strong></p>
+					<p>Master of Library & Information Science (MLIS), Archives Management</p>
+					<p>2019-2021</p>
+
+					<p><strong>University of Pittsburgh</strong></p>
+					<p>Bachelor of Arts (BA), Anthropolgy; Political Science</p>
+					<p>2013-2017</p>
 
 
 	</div>
