--- a/cv/index.html
+++ b/cv/index.html
@@ -9,18 +9,17 @@ title: CV of Your Name
 					<address>
 					<strong>Tufts University</strong>
 					<br>Medford, MA 02155<br>
-					<abbr title="phone"></abbr><br>
 					<span class="obfuscate">gloria.shin@tufts.edu</span>
 					</address>
 
 					<h2>Experience</h2>
 
 					<p><strong>Tufts University</strong>
-					<p>Senior Library Assistant for Digital Initiatives</p>
+					<p style="margin-bottom:0;">Senior Library Assistant for Digital Initiatives</p>
 					<p>2022-Present</p>
 
 					<p><strong>Hearst Corporation</strong>
-					<p>Archival Technician</p>
+					<p style="margin-bottom:0;>Archival Technician</p>
 					<p>2020-Present</p>
 
 					<h2>Education</h2>
