--- a/cv/index.html
+++ b/cv/index.html
@@ -15,11 +15,11 @@ title: CV of Your Name
 					<h2>Experience</h2>
 
 					<p><strong>Tufts University</strong>
-					<p style="margin-bottom:0;">Senior Library Assistant for Digital Initiatives</p>
+					<p>Senior Library Assistant for Digital Initiatives</p>
 					<p>2022-Present</p>
 
 					<p><strong>Hearst Corporation</strong>
-					<p style="margin-bottom:0;>Archival Technician</p>
+					<p>Archival Technician</p>
 					<p>2020-Present</p>
 
 					<h2>Education</h2>
