--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Gloria!</h1>
-	<p>I am the Senior Library Assistant for Digital Initiatives at Tufts University.<a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+	<h1>Gloria Shin</h1>
+	<p>Librarian</p>
+	<p>Boston, MA</p>
