--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: About Gloria Shin
 ---
 
 		<div class="about">
@@ -10,8 +10,7 @@ title: About Hank Quinlan
 			<p>I also have my Bachelors degrees in Anthropology and Political Science from the University of Pittsburgh.</p>
 
 			<ul class="contacts">
-				<li><a href="#">@TwitterHandle</a></li>
-				<li><a href="#">Your Departmental Webpage</a></li>
-				<li><a href="#">Another site you want to link to</a></li>
+				<li><a href="https://tischlibrary.tufts.edu/about-library/about/staff-directory/departments/272">Tufts University Digital Initiatives</a></li>
+				<li><a href="#"></a></li>
 				</ul>
 		</div>
