--- a/index.html
+++ b/index.html
@@ -3,6 +3,4 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Gloria Shin</h1>
-	<p>Librarian</p>
-	<p>Boston, MA</p>
+	<h1>Gloria Shin</h1><p>is a librarian working in the greater Boston area. While not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</p> 
