--- a/index.html
+++ b/index.html
@@ -2,5 +2,30 @@
 layout: default
 title: Hank Quinlan, Horrible Cop
 ---
+<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+	<style>
+		h1 {
+    			font-size: 3em;
+    			font-family:'Playfair Display', serif;
+			}
+		p {
+   			font-size: 1.5em;
+    			line-height: 1.4em;
+   			color: #333;
+			font-family:'Playfair Display', serif;
+			}
+		body {
+  	  		margin: 60px auto;
+    			width: 70%;
+			font-family:'Playfair Display', serif;
+			}
+	</style>
+</head>
+
+<head>
 <div class="blurb">
-	<h1>Gloria Shin</h1><p>is a librarian working in the greater Boston area. While not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</p> 
+	<h1>Gloria Shin</h1><body>is a librarian working in the greater Boston area. While not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</body>
+</head>
