--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@ title: Hank Quinlan, Horrible Cop
 
 <head>
 <div class="blurb">
-	<h1>Gloria Shin</h1><body>is a librarian working in the greater Boston area. While not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</body>
+	<h1>Gloria Shin</h1><body>is a librarian working in the greater Boston area. When not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</body>
 </head>
