--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@ title: Hank Quinlan, Horrible Cop
 <head>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&display=swap" rel="stylesheet">
 	<style>
 		h1 {
     			font-size: 3em;
-    			font-family:'Playfair Display', serif;
+    			font-family: 'Lora', serif;
+			}
+		h2 {
+			font-family: 'Lora', serif;
 			}
 		p {
    			font-size: 1.5em;
     			line-height: 1.4em;
    			color: #333;
-			font-family:'Playfair Display', serif;
+			font-family: 'Lora', serif;
 			}
 		body {
-  	  		margin: 60px auto;
+			margin: 60px auto;
     			width: 70%;
-			font-family:'Playfair Display', serif;
+			font-family: 'Lora', serif;
 			}
 	</style>
 </head>
 
 <head>
 <div class="blurb">
-	<h1>Gloria Shin</h1><body>is a librarian working in the greater Boston area. When not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</body>
+	<h1><i>Gloria Shin</i></h><h2>is a librarian working in the greater Boston area. When not working on digital projects, you can find her running through the city in search of the best coffee and pastries Boston has to offer.</h2>
 </head>
