--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Gloria Shin, MLIS
 ---
 <head>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 	<style>
 		h1 {
     			font-size: 3em;
-    			font-family: 'Lora', serif;
+    			font-family: 'Merriweather', serif;
+
 			}
 		h2 {
 			font-family: 'Lora', serif;
@@ -18,12 +19,13 @@ title: Hank Quinlan, Horrible Cop
    			font-size: 1.5em;
     			line-height: 1.4em;
    			color: #333;
-			font-family: 'Lora', serif;
+			font-family: 'Merriweather', serif;
+
 			}
 		body {
 			margin: 60px auto;
     			width: 70%;
-			font-family: 'Lora', serif;
+			font-family: 'Merriweather', serif;
 			}
 	</style>
 </head>
