--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Gloria Shin, MLIS
 
 			}
 		h2 {
-			font-family: 'Lora', serif;
+			font-family: 'Merriweather', serif;
 			}
 		p {
    			font-size: 1.5em;
