--- a/about/index.html
+++ b/about/index.html
@@ -4,12 +4,12 @@ title: About Gloria Shin
 ---
 
 		<div class="about">
-			<p style="font-size:80px">&#128075; My name is Gloria Shin and I currently work as the Senior Library Assistant for Digital Initiatives at Tufts University.</p>
-			<p>I graduated from Simmons University with my Masters in Library and Information Science.</p>
-			<p>I also have my Bachelors degrees in Anthropology and Political Science from the University of Pittsburgh.</p>
+			<p style="font-size:50px">&#128075; My name is Gloria Shin, a digital librarian based in Boston. Currently, the Senior Library Assistant for Digital Initiatives at Tufts University.</p>
+			<p style="font-size:20px">&#128188; Experience</p>
+			<p>Tufts University</p>
+			<i>Senior Library Assistant, Digital Initiatives &#8212; 2021 - Present</i>
+			<p style="font-size:20px">&#127891; Education</p>
+			<p>Simmons University, MLIS &#8212; 2019-2021</p>
+			<p>University of Pittsburgh, BA &#8212; 2013-2017</p>
 
-			<ul class="contacts">
-				<li><a href="https://tischlibrary.tufts.edu/about-library/about/staff-directory/departments/272">Tufts University Digital Initiatives</a></li>
-				<li><a href="#"></a></li>
-				</ul>
 		</div>
