--- a/about/index.html
+++ b/about/index.html
@@ -5,11 +5,13 @@ title: About Gloria Shin
 
 		<div class="about">
 			<p style="font-size:50px">&#128075; My name is Gloria Shin, a digital librarian based in Boston. Currently, the Senior Library Assistant for Digital Initiatives at Tufts University.</p>
-			<p style="font-size:20px">&#128188; Experience</p>
-			<p>Tufts University</p>
-			<i>Senior Library Assistant, Digital Initiatives &#8212; 2021 - Present</i>
-			<p style="font-size:20px">&#127891; Education</p>
-			<p>Simmons University, MLIS &#8212; 2019-2021</p>
-			<p>University of Pittsburgh, BA &#8212; 2013-2017</p>
+			<p style="font-size:35px"><b>&#128188; Experience</b></p>
+			<p style="font-size:30px">Tufts University</p>
+			<p style="font-size:25px"><i>Senior Library Assistant, Digital Initiatives &#8212; 2022 - Present</i></p>
+			<p style="font-size:30px">Peabody Museum of Archaeology and Ethnology, Harvard University</p>
+			<p style="font-size:25px"><i>Archival Scanning Technician &#8212; 2020 - 2022</i></p>
+			<p style="font-size:35px"><b>&#127891; Education</b></p>
+			<p style="font-size:25px">Simmons University, MLIS &#8212; 2019 - 2021</p>
+			<p style="font-size:25px">University of Pittsburgh, BA &#8212; 2013 - 2017</p>
 
 		</div>
